--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js",
+    "test:tdd": "npm run test -- --watch"
   },
   "husky": {
     "hooks": {
@@ -28,9 +29,14 @@
   },
   "homepage": "https://github.com/RodriguesLs/js-tdd-learn#readme",
   "devDependencies": {
+    "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "husky": "^4.2.3"
+    "husky": "^4.2.3",
+    "mocha": "^7.1.0",
+    "webpack": "^4.42.0",
+    "webpack-dev-server": "^3.10.3"
   }
 }
