--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register",
     "test:tdd": "npm run test -- --watch"
   },
   "husky": {
-    "hooks": {
-      "pre-push": "npm run lint"
-    }
+    "hooks": {}
   },
   "repository": {
     "type": "git",
@@ -29,7 +27,13 @@
   },
   "homepage": "https://github.com/RodriguesLs/js-tdd-learn#readme",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6",
     "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -38,5 +42,8 @@
     "mocha": "^7.1.0",
     "webpack": "^4.42.0",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.8.7"
   }
 }
