--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register",
     "test:tdd": "npm run test -- --watch",
-    "test:coverage": "nyc npm test"
-
+    "test:coverage": "nyc npm test",
+    "prepush": "npm run test:coverage"
   },
   "nyc": {
+    "lines": 80,
+    "functions": 80,
+    "check-coverage": true,
     "reporter": ["text", "html"],
     "exclude": ["tests/**"]
   },
