--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register",
     "test:tdd": "npm run test -- --watch",
-    "test:coverage": "nyc npm test",
-    "prepush": "npm run test:coverage"
+    "test:coverage": "nyc npm test"
   },
   "nyc": {
     "lines": 80,
@@ -18,7 +17,9 @@
     "exclude": ["tests/**"]
   },
   "husky": {
-    "hooks": {}
+    "hooks": {
+      "pre-push": "npm run test:coverage"
+    }
   },
   "repository": {
     "type": "git",
